<resources>
    <string name="app_name">Java</string>
    <string name="register_user"></string>
    <string name="register_password1"></string>
    <string name="register_password2"></string>
    <string name="register_email"></string>
    <string name="search"></string>
    <string name="begin_stars"></string>
    <string name="class1"></string>
    <string name="class2"></string>
    <string name="class3"></string>
    <string name="class4"></string>
    <string name="class5"></string>
    <string name="class6"></string>
    <string name="class7"></string>
    <string name="class8"></string>
    <string name="class9"></string>
    <string name="class10"></string>
    <string name="class11"></string>
    <string name="class12"></string>
    <string name="class13"></string>
    <string name="class14"></string>
    <string name="class15"></string>
    <string name="class16"></string>
    <string name="class17"></string>
    <string name="class18"></string>
    <string name="class19"></string>
    <string name="class20"></string>
    <string name="class21"></string>
    <string name="class22"></string>
    <string name="class23"></string>
    <string name="class24"></string>
    <string name="class25"></string>
    <string name="class26"></string>
    <string name="class27"></string>
    <string name="class28"></string>
    <string name="class29"></string>
    <string name="class30"></string>
    <string name="class31"></string>
    <string name="class32"></string>
    <string name="class33"></string>
    <string name="class34"></string>
    <string name="class35"></string>
    <string name="class36"></string>
    <string name="class37"></string>
    <string name="class38"></string>
    <string name="class39"></string>
    <string name="class40"></string>
    <string name="class41"></string>
    <string name="class42"></string>
    <string name="class43"></string>
    <string name="class44"></string>
    <string name="class45"></string>
    <string name="class46"></string>
    <string name="class47"></string>
    <string name="class48"></string>
    <string name="class49"></string>
    <string name="class50"></string>
    <string name="class51"></string>
    <string name="class52"></string>
    <string name="class53"></string>
    <string name="class54"></string>
    <string name="class55"></string>
    <string name="class56"></string>
    <string name="class57"></string>
    <string name="class58"></string>
    <string name="class59"></string>
    <string name="class60"></string>
    <string name="class61"></string>
    <string name="class62"></string>
    <string name="class63"></string>
    <string name="class64"></string>
    <string name="class65"></string>
    <string name="class66"></string>
    <string name="class67"></string>
    <string name="class68"></string>
    <string name="class69"></string>
    <string name="class70"></string>
    <string name="class71"></string>
    <string name="class72"></string>
    <string name="class73"></string>
    <string name="class74"></string>
    <string name="class75"></string>
    <string name="class76"></string>
    <string name="class77"></string>
    <string name="class78"></string>
    <string name="class79"></string>
    <string name="class80"></string>
    <string name="content1"></string>
    <string name="content2"></string>
    <string name="content3"></string>
    <string name="content4"></string>
    <string name="content5"></string>
    <string name="content6"></string>
    <string name="content7"></string>
    <string name="content8"></string>
    <string name="content9"></string>
    <string name="content10"></string>
    <string name="content11"></string>
    <string name="content12"></string>
    <string name="content13"></string>
    <string name="content14"></string>
    <string name="content15"></string>
    <string name="content16"></string>
    <string name="content17"></string>
    <string name="content18"></string>
    <string name="content19"></string>
    <string name="content20"></string>
    <string name="content21"></string>
    <string name="content22"></string>
    <string name="content23"></string>
    <string name="content24"></string>
    <string name="content25"></string>
    <string name="content26"></string>
    <string name="content27"></string>
    <string name="content28"></string>
    <string name="content29"></string>
    <string name="content30"></string>
    <string name="content31"></string>
    <string name="content32"></string>
    <string name="content33"></string>
    <string name="content34"></string>
    <string name="content35"></string>
    <string name="content36"></string>
    <string name="content37"></string>
    <string name="content38"></string>
    <string name="content39"></string>
    <string name="content40"></string>
    <string name="content41"></string>
    <string name="content42"></string>
    <string name="content43"></string>
    <string name="content44"></string>
    <string name="content45"></string>
    <string name="content46"></string>
    <string name="content47"></string>
    <string name="content48"></string>
    <string name="content49"></string>
    <string name="content50"></string>
    <string name="content51"></string>
    <string name="content52"></string>
    <string name="content53"></string>
    <string name="content54"></string>
    <string name="content55"></string>
    <string name="content56"></string>
    <string name="content57"></string>
    <string name="content58"></string>
    <string name="content59"></string>
    <string name="content60"></string>
    <string name="content61"></string>
    <string name="content62"></string>
    <string name="content63"></string>
    <string name="content64"></string>
    <string name="content65"></string>
    <string name="content66"></string>
    <string name="content67"></string>
    <string name="content68"></string>
    <string name="content69"></string>
    <string name="content70"></string>
    <string name="content71"></string>
    <string name="content72"></string>
    <string name="content73"></string>
    <string name="content74"></string>
    <string name="content75"></string>
    <string name="content76"></string>
    <string name="content77"></string>
    <string name="content78"></string>
    <string name="content79"></string>
    <string name="content80"></string>
    <string name="class_name"></string>
    <string name="QUESTION"></string>
    <string name="class_question1"></string>
    <string name="class_question2"></string>
    <string name="class_question3"></string>
    <string name="class_question4"></string>
    <string name="class_question5"></string>
    <string name="class_question6"></string>
    <string name="class_question7"></string>
    <string name="class_question8"></string>
    <string name="class_question9"></string>
    <string name="class_question10"></string>
    <string name="class_question11"></string>
    <string name="class_question12"></string>
    <string name="class_question13"></string>
    <string name="class_question14"></string>
    <string name="class_question15"></string>
    <string name="class_question16"></string>
    <string name="class_question17"></string>
    <string name="class_question18"></string>
    <string name="class_question19"></string>
    <string name="class_question20"></string>
    <string name="class_question21"></string>
    <string name="class_question22"></string>
    <string name="class_question23"></string>
    <string name="class_question24"></string>
    <string name="class_question25"></string>
    <string name="class_question26"></string>
    <string name="class_question27"></string>
    <string name="class_question28"></string>
    <string name="class_question29"></string>
    <string name="class_question30"></string>
    <string name="class_question31"></string>
    <string name="class_question32"></string>
    <string name="class_question33"></string>
    <string name="class_question34"></string>
    <string name="class_question35"></string>
    <string name="class_question36"></string>
    <string name="class_question37"></string>
    <string name="class_question38"></string>
    <string name="class_question39"></string>
    <string name="class_question40"></string>
    <string name="class_question41"></string>
    <string name="class_question42"></string>
    <string name="class_question43"></string>
    <string name="class_question44"></string>
    <string name="class_question45"></string>
    <string name="class_question46"></string>
    <string name="class_question47"></string>
    <string name="class_question48"></string>
    <string name="class_question49"></string>
    <string name="class_question50"></string>
    <string name="class_answer1"></string>
    <string name="class_answer2"></string>
    <string name="class_answer3"></string>
    <string name="class_answer4"></string>
    <string name="class_answer5"></string>
    <string name="class_answer6"></string>
    <string name="class_answer7"></string>
    <string name="class_answer8"></string>
    <string name="class_answer9"></string>
    <string name="class_answer10"></string>
    <string name="class_answer11"></string>
    <string name="class_answer12"></string>
    <string name="class_answer13"></string>
    <string name="class_answer14"></string>
    <string name="class_answer15"></string>
    <string name="class_answer16"></string>
    <string name="class_answer17"></string>
    <string name="class_answer18"></string>
    <string name="class_answer19"></string>
    <string name="class_answer20"></string>
    <string name="class_answer21"></string>
    <string name="class_answer22"></string>
    <string name="class_answer23"></string>
    <string name="class_answer24"></string>
    <string name="class_answer25"></string>
    <string name="class_answer26"></string>
    <string name="class_answer27"></string>
    <string name="class_answer28"></string>
    <string name="class_answer29"></string>
    <string name="class_answer30"></string>
    <string name="class_answer31"></string>
    <string name="class_answer32"></string>
    <string name="class_answer33"></string>
    <string name="class_answer34"></string>
    <string name="class_answer35"></string>
    <string name="class_answer36"></string>
    <string name="class_answer37"></string>
    <string name="class_answer38"></string>
    <string name="class_answer39"></string>
    <string name="class_answer40"></string>
    <string name="class_answer41"></string>
    <string name="class_answer42"></string>
    <string name="class_answer43"></string>
    <string name="class_answer44"></string>
    <string name="class_answer45"></string>
    <string name="class_answer46"></string>
    <string name="class_answer47"></string>
    <string name="class_answer48"></string>
    <string name="class_answer49"></string>
    <string name="class_answer50"></string>
    <string name="displayquestion"></string>
    <string name="name"></string>
    <string name="about_us">
        我们来自...神奇的...广袤的...非常厉害的...某Java小组...我们的组长十分牛逼，
        组员也十分牛逼，只有写这段话的我是个菜鸡......
    </string>
    <string name="number1"></string>
    <string name="number2"></string>
    <string name="number3"></string>
    <string name="number4"></string>
    <string name="number5"></string>
    <string name="number6"></string>
    <string name="number7"></string>
    <string name="number8"></string>
    <string name="number9"></string>
    <string name="number10"></string>
    <string name="number11"></string>
    <string name="elective_class"></string>
    <string name="elective2class1"></string>
    <string name="elective2class2"></string>
    <string name="elective2class3"></string>
    <string name="elective2content1"></string>
    <string name="elective2content2"></string>
    <string name="elective2content3"></string>
    <string name="elective2number1"></string>
    <string name="elective2number2"></string>
</resources>